[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tapis.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/soup.png" type="Texture" id=2]
[ext_resource path="res://src/scripts/level.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 125.729

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 74.1304, 135.925 )

[node name="Level" type="Node2D"]
position = Vector2( 0, -1.19354 )
script = ExtResource( 4 )

[node name="Soup" type="Sprite" parent="."]
position = Vector2( 643.371, 632.908 )
texture = ExtResource( 2 )

[node name="DepositArea" type="Area2D" parent="Soup"]
position = Vector2( -1.1936, 1.19354 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Soup/DepositArea"]
shape = SubResource( 1 )

[node name="SpawnIngredient" type="Position2D" parent="."]
position = Vector2( -100.259, 130.097 )

[node name="DispawnIngredient" type="Area2D" parent="."]
position = Vector2( 1474.04, 300.776 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DispawnIngredient"]
position = Vector2( 1.19348, -121.742 )
shape = SubResource( 2 )

[node name="ConvoyerBelt" type="Node2D" parent="."]

[node name="ConvoyerBelt1" type="Sprite" parent="ConvoyerBelt"]
position = Vector2( 641.785, 182.755 )
scale = Vector2( 1.05533, 1 )
texture = ExtResource( 1 )

[node name="ConvoyerBelt2" type="Sprite" parent="ConvoyerBelt"]
position = Vector2( -211.951, 1153.25 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="Soup/DepositArea" to="." method="_on_DepositArea_area_entered"]
[connection signal="area_exited" from="Soup/DepositArea" to="." method="_on_DepositArea_area_exited"]
[connection signal="area_entered" from="DispawnIngredient" to="." method="_on_DispawnIngredient_area_entered"]
[connection signal="area_exited" from="DispawnIngredient" to="." method="_on_DispawnIngredient_area_exited"]
